ongoing debugging work.

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -33,11 +33,9 @@
     },
 
     // Browser Rendering API
-    "browser": [
-      {
-        "binding": "BROWSER"
-      }
-    ],
+    "browser":{
+      "binding": "BROWSER"
+    },
 
     // Static assets for frontend
     "assets": {
